# eda-dashboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  witch -c pre-bug bde8b41
.streamlit/: config.toml
analytics/: drift.py  fairness.py  profiling.py
api/: main.py
api/routers/: __init__.py  correlation.py  datasets.py  distributions.py  fairness_drift.py  zip.py
app/: Dashboard.py  bias_metrics.py  config.py  utils.py
app/pages/: 01_Explore.py  02_Distributions.py  03_Correlation.py  04_Fairness_&_Drift.py
data/processed/: iris.parquet
jobs/: microbatch.py  watch.py
notebooks/: prototype.ipynb
notebooks/.ipynb_checkpoints/: prototype-checkpoint.ipynb
storage/: duck.py  files.py
tests/: test_profiling.py  test_storage.py
