[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eda-dashboard"
version = "0.1.0"
description = "EDA Dashboard with Streamlit and DuckDB for data analysis"
authors = [
    {name = "Ryan Dielhenn"},
    {name = "Joe Jimenez"},
    {name = "Roshan Roy Suja"}
]
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.50.0",
    "duckdb>=1.1.3",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
    "numpy>=2.3.3",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "api*", "analytics*", "storage*"]
exclude = ["data*", "diagrams*", "notebooks*"]
